Update files for basic specimen

--- a/sources/BlueOcean-Bold.ufo/lib.plist
+++ b/sources/BlueOcean-Bold.ufo/lib.plist
@@ -7,6 +7,7 @@
 		<string>I</string>
 		<string>a</string>
 		<string>j</string>
+		<string>Blue/space Ocean</string>
 	</array>
 	<key>com.schriftgestaltung.disablesAutomaticAlignment</key>
 	<true/>
