Redrawing basic glyphs

--- a/sources/BlueOcean-Bold.ufo/lib.plist
+++ b/sources/BlueOcean-Bold.ufo/lib.plist
@@ -4,10 +4,8 @@
 <dict>
 	<key>com.schriftgestaltung.DisplayStrings</key>
 	<array>
-		<string>I</string>
-		<string>a</string>
-		<string>j</string>
-		<string>Blue/space Ocean</string>
+		<string>ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
+		<string>abcdefghijklmnopqrstuvwxyz</string>
 	</array>
 	<key>com.schriftgestaltung.disablesAutomaticAlignment</key>
 	<true/>
